# esp32-see-n-say

./: CLAUDE.md  CMakeLists.txt  README.md
main/: CMakeLists.txt  config.h  main.c
main/audio/: i2s_output.c  i2s_output.h
spec/: README.md  adc-input-circuit.md  pin-assignments.md
